z-index fix

--- a/wen/styles.css
+++ b/wen/styles.css
@@ -172,7 +172,7 @@ span {
   height: 100vh;
   border: 0;
   transition: 0.25s;
-  z-index: 1;
+  z-index: 2;
   border-radius: 2px;
 }
 
